The heading is no longer behind the header when navigating through the header

--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -7,7 +7,7 @@
 }
 
 #experiences {
-    margin: 5% 0;
+    padding-top: 68px;
 }
 
 #experiences h2 {
